RESOLVED FIXED158931
WebKitTestRunner: Missing \n at the line of "#PROCESS UNRESPONSIVE"
https://bugs.webkit.org/show_bug.cgi?id=158931
Summary WebKitTestRunner: Missing \n at the line of "#PROCESS UNRESPONSIVE"
Fujii Hironori
Reported 2016-06-19 23:31:31 PDT
In Tools/WebKitTestRunner/TestInvocation.cpp, > #if PLATFORM(COCOA) > pid_t pid = WKPageGetProcessIdentifier(TestController::singleton().mainWebView()->page()); > sprintf(errorMessageToStderr, "#PROCESS UNRESPONSIVE - %s (pid %ld)\n", TestController::webProcessName(), static_cast<long>(pid)); > #else > sprintf(errorMessageToStderr, "#PROCESS UNRESPONSIVE - %s", TestController::webProcessName()); > #endif \n is missing in the second sprintf.
Attachments
Patch (1.56 KB, patch)
2016-06-19 23:35 PDT, Fujii Hironori
no flags
Fujii Hironori
Comment 1 2016-06-19 23:35:36 PDT
WebKit Commit Bot
Comment 2 2016-06-20 00:07:14 PDT
Comment on attachment 281634 [details] Patch Clearing flags on attachment: 281634 Committed r202226: <http://trac.webkit.org/changeset/202226>
WebKit Commit Bot
Comment 3 2016-06-20 00:07:20 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.